--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "assert-fine": "^1.2.2",
     "eslint": "^7.15.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.20"
   }
 }
